--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,12 +7,12 @@
             <div class="card-body">
                 <form class="form">
                     <div class="form-group">
-                        <label for="">Email</label>
-                        <input [(ngModel)]="loginUserData.email" name="email" type="text" class="form-control rounded-0" required />
+                        <label for="email">Email</label>
+                        <input [(ngModel)]="loginUserData.email" id="email" name="email" type="text" class="form-control rounded-0" required />
                     </div>
                     <div class="form-group">
-                        <label for="">Password</label>
-                        <input [(ngModel)]="loginUserData.password" name="password" type="password" class="form-control rounded-0" required />
+                        <label for="password">Password</label>
+                        <input [(ngModel)]="loginUserData.password" id="password" name="password" type="password" class="form-control rounded-0" required />
                     </div>
                     <button (click)="loginUser()" type="button" class="btn btn-success float-right">
                         Login
