--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -7,16 +7,16 @@
             <div class="card-body">
                 <form class="form">
                     <div class="form-group">
-                        <label for="">Email</label>
-                        <input [(ngModel)]="registerUserData.email" name="email" type="text" class="form-control rounded-0" required />
+                        <label for="email">Email</label>
+                        <input [(ngModel)]="registerUserData.email" id="email" name="email" type="text" class="form-control rounded-0" required />
                     </div>
                     <div class="form-group">
-                        <label for="">Username</label>
-                        <input [(ngModel)]="registerUserData.username" name="username" type="text" class="form-control rounded-0" required />
+                        <label for="username">Username</label>
+                        <input [(ngModel)]="registerUserData.username" id="username" name="username" type="text" class="form-control rounded-0" required />
                     </div>
                     <div class="form-group">
-                        <label for="">Password</label>
-                        <input [(ngModel)]="registerUserData.password" name="password" type="password" class="form-control rounded-0" required />
+                        <label for="password">Password</label>
+                        <input [(ngModel)]="registerUserData.password" id="password" name="password" type="password" class="form-control rounded-0" required />
                     </div>
                     <button (click)="registerUser()" type="button" class="btn btn-primary float-right">
                         Register
