--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,18 +5,30 @@
                 <h3 class="mb-0">Login</h3>
             </div>
             <div class="card-body">
-                <form class="form">
+                <form #f="ngForm" (ngSubmit)="loginUser(f.value)" class="form">
                     <div class="form-group">
-                        <label for="email">Email</label>
-                        <input [(ngModel)]="loginUserData.email" id="email" name="email" type="text" class="form-control rounded-0" required />
+                        <label for="emailInput">Email</label>
+                        <input ngModel id="emailInput" name="email" #email="ngModel" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" class="form-control rounded-0" required />
+                        <div *ngIf="email.touched && email.invalid" class="alert alert-danger">
+                            <div *ngIf="email.errors?.required">Email is required.</div>
+                            <div *ngIf="email.errors?.pattern">
+                                This is not a valid Email!!!
+                            </div>
+                        </div>
                     </div>
                     <div class="form-group">
-                        <label for="password">Password</label>
-                        <input [(ngModel)]="loginUserData.password" id="password" name="password" type="password" class="form-control rounded-0" required />
+                        <label for="passwordInput">Password</label>
+                        <input ngModel id="passwordInput" minlength="6" name="password" #password="ngModel" type="password" class="form-control rounded-0" required />
+                        <div *ngIf="password.touched && password.invalid" class="alert alert-danger">
+                            <div *ngIf="password.errors?.required">Password is required.</div>
+                            <div *ngIf="password.errors?.minlength">
+                                Password should be at least {{ password.errors?.minlength?.requiredLength }} characters.
+                            </div>
+                        </div>
                     </div>
-                    <button (click)="loginUser()" type="button" class="btn btn-success float-right">
-                        Login
-                    </button>
+                    <button class="btn btn-success float-right" [disabled]="f.invalid">
+            Login
+          </button>
                 </form>
             </div>
         </div>
