profile pic input added

--- a/src/app/resume-form/resume-form.component.html
+++ b/src/app/resume-form/resume-form.component.html
@@ -31,10 +31,10 @@
                 <label for="skillsInput">Skills</label>
                 <textarea id="skillsInput" formControlName="skills" rows="3" class="form-control" placeholder="Write your skills comma seperated"></textarea>
             </div>
-            <!-- <div class="form-group mt-2">
-                <label for="profileInput">Select your profile image</label>
-                <input type="file" id="profileInput" class="form-control" />
-            </div> -->
+            <div class="form-group mt-2">
+                <label for="profileInput">Enter your picture url</label>
+                <input type="url" formControlName="profile" id="profileInput" placeholder="Write your profile url" class="form-control" />
+            </div>
             <p class="text-secondary mt-3">Social Links</p>
             <div class="form-group mt-2">
                 <label for="linkedInput">LinkedIn</label>
