--- a/src/app/resume-template/resume-template.component.html
+++ b/src/app/resume-template/resume-template.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-3 py-5 background">
             <div class="text-center">
-                <img src="https://st.depositphotos.com/2101611/3925/v/600/depositphotos_39258143-stock-illustration-businessman-avatar-profile-picture.jpg" alt="profile image" class="img-fluid myimg mb-2" />
+                <img [src]="resumeData.profile" alt="profile image" class="img-fluid myimg mb-2" />
 
                 <p>{{ resumeData.position }}</p>
             </div>
