implement reacive form in edit profile page

--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -5,38 +5,52 @@
                 <h3 class="mb-0">Edit Profile</h3>
             </div>
             <div class="card-body">
-                <form #f="ngForm" (ngSubmit)="editUser(f.value)" class="form">
+                <form [formGroup]="user" (ngSubmit)="editUser()" class="form">
                     <div class="form-group">
                         <label for="emailInput">New Email</label>
-                        <input ngModel id="emailInput" name="email" #email="ngModel" [value]="user.email" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" class="form-control rounded-0" required />
-                        <div *ngIf="email.touched && email.invalid" class="alert alert-danger">
-                            <div *ngIf="email.errors?.required">Email is required.</div>
-                            <div *ngIf="email.errors?.pattern">
+                        <input id="emailInput" type="email" formControlName="email" class="form-control rounded-0" />
+                        <div *ngIf="
+                user.controls['email'].touched && user.controls['email'].invalid
+              " class="alert alert-danger">
+                            <div *ngIf="user.controls['email'].errors?.required">
+                                Email is required.
+                            </div>
+                            <div *ngIf="user.controls['email'].errors?.email">
                                 This is not a valid Email!!!
                             </div>
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="usernameInput">New Username</label>
-                        <input minlength="4" ngModel id="usernameInput" name="username" [value]="user.username" #username="ngModel" type="text" class="form-control rounded-0" required />
-                        <div *ngIf="username.touched && username.invalid" class="alert alert-danger">
-                            <div *ngIf="username.errors?.required">Username is required.</div>
-                            <div *ngIf="username.errors?.minlength">
-                                Username should be at least {{ username.errors?.minlength?.requiredLength }} characters.
+                        <input id="usernameInput" type="text" formControlName="username" class="form-control rounded-0" />
+                        <div *ngIf="
+                user.controls['username'].touched &&
+                user.controls['username'].invalid
+              " class="alert alert-danger">
+                            <div *ngIf="user.controls['username'].errors?.required">
+                                Username is required.
+                            </div>
+                            <div *ngIf="user.controls['username'].errors?.minlength">
+                                Username should be at least {{ user.controls["username"].errors?.minlength?.requiredLength }} characters.
                             </div>
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="passwordInput">New Password</label>
-                        <input minlength="6" ngModel id="passwordInput" name="password" type="password" #password="ngModel" class="form-control rounded-0" required />
-                        <div *ngIf="password.touched && password.invalid" class="alert alert-danger">
-                            <div *ngIf="password.errors?.required">Password is required.</div>
-                            <div *ngIf="password.errors?.minlength">
-                                Password should be at least {{ password.errors?.minlength?.requiredLength }} characters.
+                        <input id="passwordInput" type="password" formControlName="password" class="form-control rounded-0" placeholder="Enter password" />
+                        <div *ngIf="
+                user.controls['password'].touched &&
+                user.controls['password'].invalid
+              " class="alert alert-danger">
+                            <div *ngIf="user.controls['password'].errors?.required">
+                                Password is required.
+                            </div>
+                            <div *ngIf="user.controls['password'].errors?.minlength">
+                                Password should be at least {{ user.controls["password"].errors?.minlength?.requiredLength }} characters.
                             </div>
                         </div>
                     </div>
-                    <button [disabled]="f.invalid" class="btn btn-primary float-right">
+                    <button type="submit" [disabled]="user.invalid" class="btn btn-primary float-right">
             Update Profile
           </button>
                 </form>
