--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -43,4 +43,9 @@
             </div>
         </div>
     </div>
+    <div class="col-md-6 mx-auto">
+        <button class="google btn1" type="button" (click)="loginWithGoogle()">
+      Signup with Google
+    </button>
+    </div>
 </div>
