--- a/src/app/resume-template/resume-template.component.html
+++ b/src/app/resume-template/resume-template.component.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="card-body">
                     <ul>
-                        <li class="new-line" *ngFor="let exp of resumeData.experience">
+                        <li class="new-line mt-2" *ngFor="let exp of resumeData.experience">
                             {{ exp }}
                         </li>
                     </ul>
@@ -62,7 +62,7 @@
                 </div>
                 <div class="card-body">
                     <ul>
-                        <li class="new-line" *ngFor="let pro of resumeData.project">
+                        <li class="new-line mt-2" *ngFor="let pro of resumeData.project">
                             {{ pro }}
                         </li>
                     </ul>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="card-body">
                     <ul>
-                        <li class="new-line" *ngFor="let cer of resumeData.certification">
+                        <li class="new-line mt-2" *ngFor="let cer of resumeData.certification">
                             {{ cer }}
                         </li>
                     </ul>
@@ -88,7 +88,7 @@
                 </div>
                 <div class="card-body">
                     <ul>
-                        <li class="new-line" *ngFor="let edu of resumeData.education">
+                        <li class="new-line mt-2" *ngFor="let edu of resumeData.education">
                             {{ edu }}
                         </li>
                     </ul>
