--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -33,4 +33,9 @@
             </div>
         </div>
     </div>
+    <div class="col-md-6 mx-auto">
+        <button class="google btn1" type="button" (click)="loginWithGoogle()">
+      Login with Google
+    </button>
+    </div>
 </div>
