--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,25 @@
 .float-right {
     float: right;
 }
+
+.btn1 {
+    width: 100%;
+    padding: 12px;
+    border: none;
+    border-radius: 4px;
+    margin: 5px 0;
+    opacity: 0.85;
+    display: inline-block;
+    font-size: 17px;
+    line-height: 20px;
+    text-decoration: none;
+}
+
+.btn1:hover {
+    opacity: 1;
+}
+
+.google {
+    background-color: #dd4b39;
+    color: white;
+}
