added login and register with facebook

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -34,8 +34,14 @@
         </div>
     </div>
     <div class="col-md-6 mx-auto">
+        <div class="hide-md-lg">
+            <p>Or</p>
+        </div>
         <button class="google btn1" type="button" (click)="loginWithGoogle()">
       Login with Google
+    </button>
+        <button class="facebook btn1" type="button" (click)="loginWithFacebook()">
+      Login with Facebook
     </button>
     </div>
 </div>
