--- a/src/styles.css
+++ b/src/styles.css
@@ -29,3 +29,23 @@
     background-color: #dd4b39;
     color: white;
 }
+
+.facebook {
+    background-color: #3b5998;
+    color: white;
+}
+
+.hide-md-lg {
+    display: none;
+}
+
+@media screen and (max-width: 770px) {
+    .vl {
+        display: none;
+    }
+    .hide-md-lg {
+        display: block;
+        text-align: center;
+        margin-top: 10px;
+    }
+}
