--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -35,26 +35,45 @@
                             </div>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label for="passwordInput">New Password</label>
-                        <input id="passwordInput" type="password" formControlName="password" class="form-control rounded-0" placeholder="Enter password" />
-                        <div *ngIf="
+                    <div class="form-group" *ngIf="!display">
+                        <label for="passwordInput">Password or New Password (If you want to change.)</label
+            >
+            <input
+              id="passwordInput"
+              type="password"
+              *ngIf="!display"
+              formControlName="password"
+              class="form-control rounded-0"
+              placeholder="Enter password"
+            />
+            <div
+              *ngIf="
                 user.controls['password'].touched &&
                 user.controls['password'].invalid
-              " class="alert alert-danger">
-                            <div *ngIf="user.controls['password'].errors?.required">
-                                Password is required.
-                            </div>
-                            <div *ngIf="user.controls['password'].errors?.minlength">
-                                Password should be at least {{ user.controls["password"].errors?.minlength?.requiredLength }} characters.
-                            </div>
-                        </div>
-                    </div>
-                    <button type="submit" [disabled]="user.invalid" class="btn btn-primary float-right">
+              "
+              class="alert alert-danger"
+            >
+              <div *ngIf="user.controls['password'].errors?.required">
+                Password is required.
+              </div>
+              <div *ngIf="user.controls['password'].errors?.minlength">
+                Password should be at least
+                {{
+                  user.controls["password"].errors?.minlength?.requiredLength
+                }}
+                characters.
+              </div>
+            </div>
+          </div>
+          <button
+            type="submit"
+            [disabled]="user.invalid"
+            class="btn btn-primary float-right"
+          >
             Update Profile
           </button>
-                </form>
-            </div>
-        </div>
+        </form>
+      </div>
     </div>
+  </div>
 </div>
