--- a/src/app/resume-form/resume-form.component.html
+++ b/src/app/resume-form/resume-form.component.html
@@ -68,6 +68,9 @@
                     <button type="button" (click)="onAddExperience()" class="btn btn-success btn-sm">
             Add Experience
           </button>
+                    <button type="button" (click)="onRemoveExperience()" class="btn btn-danger btn-sm">
+            Remove Experience
+          </button>
                 </div>
             </div>
             <div class="form-group mt-2" formArrayName="project">
@@ -78,6 +81,9 @@
                 <div class="container text-center">
                     <button type="button" (click)="onAddProject()" class="btn btn-success btn-sm">
             Add Project
+          </button>
+                    <button type="button" (click)="onRemoveProject()" class="btn btn-danger btn-sm">
+            Remove Project
           </button>
                 </div>
             </div>
@@ -91,6 +97,9 @@
                     <button type="button" (click)="onAddCertifiction()" class="btn btn-success btn-sm">
             Add Certification
           </button>
+                    <button type="button" (click)="onRemoveCertification()" class="btn btn-danger btn-sm">
+            Remove Certification
+          </button>
                 </div>
             </div>
             <div class="form-group mt-2" formArrayName="education">
@@ -103,13 +112,14 @@
                     <button type="button" (click)="onAddEducation()" class="btn btn-success btn-sm">
             Add Education
           </button>
+                    <button type="button" (click)="onRemoveEducation()" class="btn btn-danger btn-sm">
+            Remove Education
+          </button>
                 </div>
             </div>
         </div>
         <div class="container text-center m-2">
-            <button type="submit" class="btn btn-primary btn-lg">
-        Generate Resume
-      </button>
+            <button type="submit" class="btn btn-primary btn-lg">Save Resume</button>
         </div>
     </div>
 </form>
