--- a/src/app/view-all-templates/view-all-templates.component.html
+++ b/src/app/view-all-templates/view-all-templates.component.html
@@ -1,6 +1,6 @@
 <div class="container text-center">
     <h1 class="mt-3">Select Template</h1>
-    <div class="row">
+    <div class="row mb-5">
         <div class="col-md-6 mt-3">
             <a><img class="template" src="../../assets/resume-templates/template.PNG" alt="template-one" routerLink="/template-one" routerLinkActive="active" /></a>
         </div>
