implemented forgot and reset-password

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,6 +26,7 @@
                             </div>
                         </div>
                     </div>
+                    <a class="mt-10" routerLink="/forgot-password">Forgot Password</a>
                     <button class="btn btn-success float-right" [disabled]="f.invalid">
             Login
           </button>
