--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -36,6 +36,18 @@
                             </div>
                         </div>
                     </div>
+                    <div class="form-group">
+                        <label for="confirmPasswordInput">Confirm Password</label>
+                        <input required minlength="6" ngModel id="confirmPasswordInput" name="confirmPassword" #confirmPassword="ngModel" type="text" class="form-control rounded-0" />
+                        <div *ngIf="confirmPassword.touched && confirmPassword.invalid" class="alert alert-danger">
+                            <div *ngIf="confirmPassword.errors?.required">
+                                Confirm Password is required.
+                            </div>
+                            <div *ngIf="confirmPassword != password">
+                                Password and Confirm Password should match.
+                            </div>
+                        </div>
+                    </div>
                     <button class="btn btn-primary float-right" [disabled]="f.invalid">
             Register
           </button>
