--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -19,7 +19,7 @@
                     <h5 class="mt-3">
                         A password reset link will be sent to your email.
                     </h5>
-                    <button class="btn btn-success float-right" [disabled]="f.invalid">
+                    <button class="btn btn-primary float-right" [disabled]="f.invalid">
             Send Link
           </button>
                 </form>
