--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -28,7 +28,7 @@
                             </div>
                         </div>
                     </div>
-                    <button class="btn btn-success float-right" [disabled]="f.invalid">
+                    <button class="btn btn-primary float-right" [disabled]="f.invalid">
             Reset Password
           </button>
                 </form>
