--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,9 @@
                 <h3 class="mb-0">Home</h3>
             </div>
             <div class="card-body">
-                <p class="card-text">This is the home page of user authentication website.</p>
+                <p class="card-text">
+                    This is the home page of resume builder website.
+                </p>
             </div>
         </div>
     </div>
