implemented google authentication from backend also

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -55,7 +55,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-6 mx-auto">
+    <!-- <div class="col-md-6 mx-auto">
         <div class="hide-md-lg">
             <p>Or</p>
         </div>
@@ -65,5 +65,5 @@
         <button class="facebook btn1" type="button" (click)="signupWithFacebook()">
       Signup with Facebook
     </button>
-    </div>
+    </div> -->
 </div>
