--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -35,13 +35,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="form-group" *ngIf="!display">
+                    <div class="form-group">
                         <label for="passwordInput">Password or New Password (If you want to change.)</label
             >
             <input
               id="passwordInput"
               type="password"
-              *ngIf="!display"
               formControlName="password"
               class="form-control rounded-0"
               placeholder="Enter password"
