--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -33,16 +33,9 @@
                 </form>
             </div>
         </div>
-    </div>
-    <div class="col-md-6 mx-auto">
-        <div class="hide-md-lg">
-            <p>Or</p>
-        </div>
-        <button class="google btn1" type="button" (click)="loginWithGoogle()">
-      Login with Google
-    </button>
-        <button class="facebook btn1" type="button" (click)="loginWithFacebook()">
-      Login with Facebook
+        <p class="text-center mt-3">Or</p>
+        <button class="google btn1" type="button" (click)="continueWithGoogle()">
+      Continue with Google
     </button>
     </div>
 </div>
