--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
+label {
+    margin-top: 2px;
+}
+
 .alert {
     margin-top: 3px;
 }
@@ -31,11 +35,6 @@
 
 .google {
     background-color: #dd4b39;
-    color: white;
-}
-
-.facebook {
-    background-color: #3b5998;
     color: white;
 }
 
