--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-nav></app-nav>
-<div class="container">
-    <router-outlet></router-outlet>
+<div class="container-fluid m-0 p-0">
+  <router-outlet></router-outlet>
 </div>
