--- a/src/app/users/edit-profile/edit-profile.component.html
+++ b/src/app/users/edit-profile/edit-profile.component.html
@@ -1,42 +1,63 @@
 <div class="row pt-5">
-    <div class="col-md-6 mx-auto">
-        <div class="card rounded-0">
-            <div class="card-header">
-                <h3 class="mb-0">Edit Profile</h3>
-            </div>
-            <div class="card-body">
-                <form [formGroup]="user" (ngSubmit)="editUser()" class="form">
-                    <div class="form-group">
-                        <label for="emailInput">New Email</label>
-                        <input id="emailInput" type="email" formControlName="email" class="form-control rounded-0" />
-                        <div *ngIf="
+  <div class="col-md-6 mx-auto">
+    <div class="card rounded-0">
+      <div class="card-header">
+        <h3 class="mb-0">Edit Profile</h3>
+      </div>
+      <div class="card-body">
+        <form [formGroup]="user" (ngSubmit)="editUser()" class="form">
+          <div class="form-group">
+            <label for="emailInput">New Email</label>
+            <input
+              id="emailInput"
+              type="email"
+              formControlName="email"
+              class="form-control rounded-0"
+            />
+            <div
+              *ngIf="
                 user.controls['email'].touched && user.controls['email'].invalid
-              " class="alert alert-danger">
-                            <div *ngIf="user.controls['email'].errors?.required">
-                                Email is required.
-                            </div>
-                            <div *ngIf="user.controls['email'].errors?.email">
-                                This is not a valid Email!!!
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="usernameInput">New Username</label>
-                        <input id="usernameInput" type="text" formControlName="username" class="form-control rounded-0" />
-                        <div *ngIf="
+              "
+              class="alert alert-danger"
+            >
+              <div *ngIf="user.controls['email'].errors?.required">
+                Email is required.
+              </div>
+              <div *ngIf="user.controls['email'].errors?.email">
+                This is not a valid Email!!!
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="usernameInput">New Username</label>
+            <input
+              id="usernameInput"
+              type="text"
+              formControlName="username"
+              class="form-control rounded-0"
+            />
+            <div
+              *ngIf="
                 user.controls['username'].touched &&
                 user.controls['username'].invalid
-              " class="alert alert-danger">
-                            <div *ngIf="user.controls['username'].errors?.required">
-                                Username is required.
-                            </div>
-                            <div *ngIf="user.controls['username'].errors?.minlength">
-                                Username should be at least {{ user.controls["username"].errors?.minlength?.requiredLength }} characters.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="passwordInput">Password or New Password (If you want to change.)</label
+              "
+              class="alert alert-danger"
+            >
+              <div *ngIf="user.controls['username'].errors?.required">
+                Username is required.
+              </div>
+              <div *ngIf="user.controls['username'].errors?.minlength">
+                Username should be at least
+                {{
+                  user.controls["username"].errors?.minlength?.requiredLength
+                }}
+                characters.
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="passwordInput"
+              >Password or New Password (If you want to change.)</label
             >
             <input
               id="passwordInput"
@@ -70,6 +91,88 @@
             class="btn btn-primary float-right"
           >
             Update Profile
+          </button>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-6 mx-auto">
+    <div class="card rounded-0">
+      <div class="card-header">
+        <h3 class="mb-0">Profile Verification</h3>
+      </div>
+      <div class="card-body">
+        <form [formGroup]="mobileVerify" (ngSubmit)="verify()" class="form">
+          <div class="form-group">
+            <label for="mobileInput">Mobile Number</label>
+            <input
+              id="mobileInput"
+              type="tel"
+              formControlName="mobile"
+              class="form-control rounded-0"
+            />
+            <div
+              *ngIf="
+                mobileVerify.controls['mobile'].touched &&
+                mobileVerify.controls['mobile'].invalid
+              "
+              class="alert alert-danger"
+            >
+              <div *ngIf="mobileVerify.controls['mobile'].errors?.required">
+                Mobile is required.
+              </div>
+              <div *ngIf="mobileVerify.controls['mobile'].errors?.pattern">
+                This is not a valid Mobile Number!!!
+              </div>
+            </div>
+          </div>
+          <div class="container text-center">
+            <button
+              type="button"
+              class="btn btn-primary btn-sm"
+              [disabled]="mobileVerify.controls['mobile'].invalid"
+              (click)="sendOtp()"
+            >
+              Send OTP
+            </button>
+          </div>
+          <div class="alert alert-success mt-2" *ngIf="otpSent">
+            Otp hass been sent to your mobile number.
+          </div>
+          <div class="form-group">
+            <label for="otpInput">OTP</label>
+            <input
+              id="otpInput"
+              type="text"
+              formControlName="otp"
+              class="form-control rounded-0"
+            />
+            <div
+              *ngIf="
+                mobileVerify.controls['otp'].touched &&
+                mobileVerify.controls['otp'].invalid
+              "
+              class="alert alert-danger"
+            >
+              <div *ngIf="mobileVerify.controls['otp'].errors?.required">
+                Otp is required.
+              </div>
+              <div *ngIf="mobileVerify.controls['otp'].errors?.minlength">
+                Otp should be at least
+                {{
+                  mobileVerify.controls["otp"].errors?.minlength?.requiredLength
+                }}
+                characters.
+              </div>
+            </div>
+          </div>
+
+          <button
+            type="submit"
+            [disabled]="mobileVerify.invalid"
+            class="btn btn-success float-right"
+          >
+            Verify
           </button>
         </form>
       </div>
